Fixed 'Contact Us' page's overflow and width

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,11 +1,10 @@
 @import '../../styles';
 
-
 .fa {
-    // vertical-align: middle;
     padding: 0 10px;
     color: $color-bright-golden;
 }
+
 .contact-icon-cell {
     vertical-align: top;
 }
@@ -13,17 +12,19 @@
 h1 {
     margin-top: 0;
 }
+
 b {
     border-bottom: 2px solid;
 }
+
 a {
     text-decoration: underline;
     color: $color-skyblue;
-
     &:hover {
         color: $color-golden;
     }
 }
+
 td {
     padding: 10px 0;
     text-align: left;
@@ -32,4 +33,14 @@ td {
 iframe {
     border: solid $color-bright-golden;
     margin-right: 1rem;
+}
+
+.overflow
+{
+    overflow: auto;
+}
+
+.container
+{
+    height: 90%;
 }
